# evo-schemas

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  MANIFEST.in  Makefile  NOTICE  README.md  bump.prerelease.toml  bump.release.toml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  rfc.yaml
.github/instructions/: documentation.instructions.md  schema-authoring.instructions.md  schema-versioning.instructions.md  workflow.instructions.md
.github/scripts/: create-verified-commit.js  create-verified-pr.js  git-utils.js
.github/workflows/: audit-commits.yml  generate-schema-docs.yml  pre-commit.yml  pre-release.yml  release.yml  run-tests.yml  update-changelog.yml
docs/: _category_.json  index.md
docs/schemas/: _category_.json  design-geometry.md  downhole-collection.md  downhole-intervals.md  drilling-campaign.md  experimental-variogram.md  frequency-domain-electromagnetic.md  geological-model-meshes.md  geological-sections.md  geophysical-records-1d.md  global-ellipsoid.md  gravity-1.2.0.md  gravity-2.0.0.md  gravity.md  index.md  line-segments.md  lineations-data-pointset.md  local-ellipsoids.md  magnetics-1.2.0.md  magnetics-2.0.0.md  magnetics.md  non-parametric-continuous-cumulative-distribution.md  planar-data-pointset.md  pointset.md  radiometric-1.2.0.md  radiometric-2.0.0.md  radiometric.md  regular-2d-grid.md  regular-3d-grid.md  regular-masked-3d-grid.md  resistivity-ip.md  tensor-2d-grid.md  tensor-3d-grid.md  time-domain-electromagnetic.md  triangle-mesh.md  unstructured-grid.md  unstructured-hex-grid.md  unstructured-quad-grid.md  unstructured-tet-grid.md  variogram.md
docs/schemas/components/: attribute-description.md  attribute-list-property.md  base-attribute.md  base-category-attribute.md  base-continuous-attribute.md  base-object-properties.md  base-spatial-data-properties.md  block-model-attribute.md  block-model-category-attribute.md  block-model-flexible-structure.md  block-model-fully-subblocked-structure.md  block-model-regular-structure.md  block-model-variable-octree-structure.md  bool-attribute.md  bool-time-series.md  bounding-box.md  brep-container.md  category-attribute-description.md  category-attribute.md  category-data.md  category-ensemble.md  category-time-series.md  channel-attribute.md  color-attribute.md  continuous-attribute.md  continuous-ensemble.md  (+76 more)
docs/understanding-schemas/: _category_.json  blob-storage.md  cell-type-geometry.md  understanding-attributes.md  understanding-parts.md
docs/versioning-and-release-process/: _category_.json  documentation-conventions.md  schema-development-lifecycle.md  schema-versioning-policy.md
examples/: .env.default
examples/code_generator/: python_example.py
examples/service/: blob_access_basic.py  blob_access_streaming.py  data_access.py  helpers.py  notebook.ipynb  notebook_helpers.py
schema/: base-template.schema.template  geoscience-objects.schema.json
tests/: test_dataclass_generator.py  test_json_examples.py  test_schemas_custom.py
tests/schema/: allOf_composition.schema.json  anyOf_composition.schema.json  local_defs.schema.json  oneOf_composition.schema.json
tools/: README.md  build_meta.py  clone_schema.py  common.py  documentation.py  example_instances.py  schema_walker.py  schemas.py  update_root_schema.py
tools/code_generator/: markdown_generator.py  parser.py  python_generator.py
tools/unit_generator/: Program.cs  Unit.cs
(+1174 files in other folders)
